# cargo-gc-target

./: Cargo.toml  README.md  shell.nix
src/: cargo_lto.rs  collect.rs  main.rs  metadata.rs  unit_graph.rs
