[package]
name = "cargo-gc-target"
version = "0.1.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oxalica/cargo-gc-target"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-gc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
bytesize = "1.0.0"
cargo_metadata = "0.13.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.14"
