[package]
name = "cargo-gc-target"
version = "0.2.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oxalica/cargo-gc-target"
readme = "README.md"
description = "Cargo sub-command to delete unused files in your cargo `target` directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-gc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
bytesize = "1.0.0"
cargo = "0.52.0"
env_logger = "0.8.3"
log = "0.4.14"
semver = "0.11.0"
structopt = "0.3.14"
